welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:5: error: ';' expected but 'else' found.
	}else{ 
         ^parotTrouble:9: error: Unmatched closing brace '}' ignored here
 }
 ^