welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {

if(hour<7 && hour>19 && talking==true)
	f=true
	}else{ 
	f=false}
return f;
}